Update JAT-Hero styling to Fix Subscribe
Subscribe was getting cut off when 767 or less. Lengthen JAT HERO to accomodate. Don't know how to make that adjust fluidly.

--- a/wp-content/themes/mycustom/style.css
+++ b/wp-content/themes/mycustom/style.css
@@ -52,6 +52,12 @@ Template: Newspaper
     max-height: 2000px;
     overflow: visible !important;
 }
+@media (max-width: 767px) {
+    #jackass-hero {
+    min-height: 1200px;
+    overflow: visible !important;
+    }
+}
 .jat-hero {
     margin-top: 50vh;
     font-size: 0px;
